Sets minimum width of dialogs to 375px. Fixes logo text wrapping on small screens

--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -2,6 +2,10 @@
   // SM
   @media (max-width: 959px) {
     min-height: 60vh;
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding-bottom: 0.25em;
+    }
   }
 
   // MD
