--- a/frontend/src/app/logo/logo.component.scss
+++ b/frontend/src/app/logo/logo.component.scss
@@ -14,8 +14,9 @@
       text-transform: uppercase;
       margin-top: 4rem;
       margin-bottom: 4rem;
+      font-size: 2.5rem;
 
-      @media (max-width: 959px) { font-size: 3rem; }
+      @media (min-width: 959px) { font-size: 3rem; }
       @media (min-width: 960px) { font-size: 3.5rem; }
       @media (min-width: 1280px) { font-size: 4rem; }
     }
